--- a/src/css/main.module.css
+++ b/src/css/main.module.css
@@ -6,6 +6,8 @@
     background-color: var(--main-color);
     color: var(--white-color);
     padding: 24px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .main
@@ -121,3 +123,4 @@
     border: 1px dashed var(--hover-color);
     color: var(--hover-color);
 }
+
